tests/expectations/compiler/finalize/unknown_mapping_operation_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372107]: The output of an async function must be assigned to a `Future` type..
    --> compiler-test:8:17
     |
   8 |          return finalize_mint_public(receiver, amount);
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372003]: Expected type `()` but type `Future<Fn(address,u64)>` was found
    --> compiler-test:8:17
     |
   8 |          return finalize_mint_public(receiver, amount);
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372009]: Mapping::has_key is not a valid core function.
    --> compiler-test:12:30
     |
  12 |          let has_key: bool = Mapping::has_key(account, receiver);
     |                              ^^^^^^^
Error [ETYC0372014]: Mapping::has_key is not a valid core function call.
    --> compiler-test:12:30
     |
  12 |          let has_key: bool = Mapping::has_key(account, receiver);
     |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
